<resources>
    <string name="app_name">Pet Allies</string>
    <string name="greetings">Hi! Welcome</string>
    <string name="application_logo">Application Logo</string>
    <string name="announcement_banner">Announcement Banner</string>

    <!-- Dashboard CardView Description -->
    <string name="text_picture">Hi FurMom and FurDad\nJoin us as we extend\na warm welcome to you!</string>
    <string name="dashboard_product_description">A card view containing product information</string>
    <string name="dashboard_services_description">A card view containing services information</string>
    <string name="dashboard_profile_description">A card view containing profile information</string>
    <string name="dashboard_about_us_description">A card view containing About Us information</string>

    <!-- Dashboard Imageview Section -->
    <string name="product_image_logo">Product Image Logo</string>
    <string name="services_image_logo">Services Image Logo</string>
    <string name="profile_image_logo">Profile Image Logo</string>
    <string name="about_us_image_logo">About Us Image Logo</string>

    <!-- Dashboard TextView Description -->
    <string name="product_textview">Product</string>
    <string name="services_textview">Services</string>
    <string name="profile_textview">Profile</string>
    <string name="about_us_textview">About Us</string>

    <!-- Bottom Navigation Strings -->
    <string name="bottom_home">Home</string>
    <string name="bottom_message">Message</string>
    <string name="bottom_settings">Settings</string>


    <!-- Message Section -->
    <string name="activity_title">Reach Us</string>
    <string name="location_string">Location</string>
    <string name="address">Unit 6, Megal Taft Bldg., 2140 Taft Ave.\nCor. Taylo St., 55 Zone 7, Pasay, 1300\nMetro Manila</string>
    <string name="contact_number">Contact Number</string>
    <string name="contact_details">09257255437</string>
    <string name="email_us">Email Us</string>
    <string name="email">pet_alliesanimalclinic@yahoo.com</string>
    <string name="facebook">Facebook</string>
    <string name="facebook_page_name">Pet Allies - Animal Clinic</string>

    <!-- About Us -->
    <string name="about_us_title">About Us</string>

    <!-- Login String -->
    <string name="login_image_logo">Login Image</string>
    <string name="login_greetings">Hi Paw-Allies, Welcome Back</string>
    <string name="login_instruction">Sign In to continue</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="log_in_button">LOG IN</string>
    <string name="register_button">NEW USER? SIGN UP</string>

    <!-- Signup String -->
    <string name="signup_greetings">Welcome aboard!</string>
    <string name="signup_instructions">Take the first step by Signing Up</string>
    <string name="pet_name_signup">Pet Name</string>
    <string name="parent_name_signup">Parent Name</string>
    <string name="email_signup">Email</string>
    <string name="phone_no_signup">Phone No.</string>
    <string name="password_signup">Password</string>
    <string name="confirm_password_signup">Confirm Password</string>
    <string name="sign_up_button">SIGN UP</string>
    <string name="login_in_sign_up_form">Already have an Account? LogIn</string>
    <string name="location_imageview">Location Imageview</string>
    <string name="contact_imageview">Contact ImageView</string>
    <string name="email_imageview">Email Imageview</string>
    <string name="facebook_imageview">Facebook ImageView</string>
    <string name="product_activity_title">Products</string>
    <string name="categories">Categories</string>


    <!-- Products String -->

</resources>
