<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#f3f3f3"
    tools:context=".Dashboard">

    <ScrollView
        android:id="@+id/scrollViewSection"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp">

        <!-- Content Starts Here -->
        <LinearLayout
            android:id="@+id/MainContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Header Banner -->
            <LinearLayout
                android:id="@+id/headerBanner"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/top_background"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="89dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="24dp">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:fontFamily="@font/anton"
                        android:text="@string/greetings"
                        android:textColor="@color/white"
                        android:textSize="30sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/imageLogo"
                        android:layout_width="100dp"
                        android:layout_height="75dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="4dp"
                        android:src="@drawable/pet_allies_logo"
                        android:contentDescription="@string/application_logo"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <!-- Announcement Section -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="16dp">

                <ImageView
                    android:id="@+id/announcementBanner"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:contentDescription="@string/announcement_banner"
                    android:tag="https://drive.google.com/uc?id=1vwEds8yHlGdqKs_VSW3sXyu-RTeJyX-Z"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Grid Option Menu -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginBottom="70dp">

                <GridLayout
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="10dp"
                    android:columnCount="2"
                    android:rowCount="2"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <!-- Product Section -->
                    <androidx.cardview.widget.CardView
                        android:id="@+id/products"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_margin="5dp"
                        android:clickable="true"
                        android:contentDescription="@string/dashboard_product_description"
                        android:focusable="true"
                        app:cardCornerRadius="15dp"
                        app:cardElevation="0dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView
                                android:id="@+id/imageProduct"
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="16dp"
                                android:tag="https://drive.google.com/uc?id=1PYgSHRstKm2LHHse_4tPaguZTXV-IbCG"
                                android:contentDescription="@string/product_image_logo" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/imageProduct"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="8dp"
                                android:fontFamily="@font/anton"
                                android:text="@string/product_textview"
                                android:textColor="@color/black"
                                android:textSize="20sp" />


                        </RelativeLayout>

                    </androidx.cardview.widget.CardView>

                    <!-- Services Section -->
                    <androidx.cardview.widget.CardView
                        android:id="@+id/services"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_margin="5dp"
                        android:clickable="true"
                        android:contentDescription="@string/dashboard_services_description"
                        android:focusable="true"
                        app:cardCornerRadius="15dp"
                        app:cardElevation="0dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView
                                android:id="@+id/imageServices"
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="16dp"
                                android:tag="https://drive.google.com/uc?id=1sFkQeXgDDIpWViygCjvMEntu6US-vfaN"
                                android:contentDescription="@string/services_image_logo" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/imageServices"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="8dp"
                                android:fontFamily="@font/anton"
                                android:text="@string/services_textview"
                                android:textColor="@color/black"
                                android:textSize="20sp" />


                        </RelativeLayout>

                    </androidx.cardview.widget.CardView>


                    <!-- Profile Section -->
                    <androidx.cardview.widget.CardView
                        android:id="@+id/Profile"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_margin="5dp"
                        android:clickable="true"
                        android:contentDescription="@string/dashboard_profile_description"
                        android:focusable="true"
                        app:cardCornerRadius="15dp"
                        app:cardElevation="0dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView
                                android:id="@+id/imageProfile"
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="16dp"
                                android:tag="https://drive.google.com/uc?id=1Sx1F2fXUaJsEfb70nX4r2c93-GkKEXns"
                                android:contentDescription="@string/profile_image_logo" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/imageProfile"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="8dp"
                                android:fontFamily="@font/anton"
                                android:text="@string/profile_textview"
                                android:textColor="@color/black"
                                android:textSize="20sp" />


                        </RelativeLayout>

                    </androidx.cardview.widget.CardView>


                    <!-- About Us Section -->
                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_margin="5dp"
                        android:clickable="true"
                        android:contentDescription="@string/dashboard_about_us_description"
                        android:focusable="true"
                        app:cardCornerRadius="15dp"
                        app:cardElevation="0dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView
                                android:id="@+id/imageAboutUs"
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="16dp"
                                android:tag="https://drive.google.com/uc?id=1t_rQ1fevQ4Aqj_9UvkVagwxTe7PvGjEE"
                                android:contentDescription="@string/about_us_image_logo" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/imageAboutUs"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="8dp"
                                android:fontFamily="@font/anton"
                                android:text="@string/about_us_textview"
                                android:textColor="@color/black"
                                android:textSize="20sp" />


                        </RelativeLayout>

                    </androidx.cardview.widget.CardView>

                </GridLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_alignParentBottom="true"
            app:menu="@menu/bottom_menu"/>

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
